--- a/index.html
+++ b/index.html
@@ -4,8 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MyVueApp</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <div id="app">
+    <p>Hello {{ name.toUpperCase() }}!</p>
+    <p><input type="text" v-model="name"></p>
+  </div>
+
+  <div id="to-do" class="container">
+    <h1>
+      My To-Do
+      <span class="info">({{ remaining }}/{{ todos.length }})</span>
+    </h1>
+    <!-- <ul v-if="todos.length">
+      <li v-for="(todo, index) in todos">
+        <input type="checkbox" v-model="todo.isDone">
+        <span v-bind:class="{done: todo.isDone}">{{ todo.title }}</span>
+        <span @click="deleteItem(index)" class="command">[x]</span>
+      </li>
+    </ul>
+    <ul v-else>
+      <li>Nothing to do ;)</li>
+    </ul> -->
+    <ul>
+      <li v-for="(todo, index) in todos">
+        <input type="checkbox" v-model="todo.isDone">
+        <span v-bind:class="{done: todo.isDone}">{{ todo.title }}</span>
+        <span @click="deleteItem(index)" class="command">[x]</span>
+      </li>
+      <li v-show="!todos.length">Nothing to do ;)</li>
+    </ul>
+    <!-- <form v-on:submit="addItem"> -->
+    <form @submit.prevent="addItem">
+      <input type="text" v-model="newItem">
+      <input type="submit" value="add">
+    </form>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
   <script src="js/main.js"></script>
